modified:   9. Methods/Invocation/Overview.ipynb

--- a/9. Methods/Invocation/Overview.ipynb
+++ b/9. Methods/Invocation/Overview.ipynb
@@ -551,7 +551,7 @@
     }
    },
    "source": [
-    "Below, we see proof demonstrating that the Top-Level Method may also be successfully invoked from *some other Method*:"
+    "Below, we see proof demonstrating that the Top-Level Method may also be successfully invoked from *some other Method* within the same scope:"
    ]
   },
   {
