modified:   9. Methods/Invocation/Overview.ipynb

--- a/9. Methods/Invocation/Overview.ipynb
+++ b/9. Methods/Invocation/Overview.ipynb
@@ -581,6 +581,92 @@
    "source": [
     "SomeOtherMethod();"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Order of Invocation and Declaration"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In C# the order of the Methods in the class is not important.    \n",
+    "We are allowed to **invoke** (**call**) a Method *before* it is **declared** in code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Were you expecting, like, an error or something????\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Since order doesn't matter,\n",
+    "// we can Execute a Method ABOVE the line in code\n",
+    "// where the Method is actually declared\n",
+    "ExecuteNowDeclareLater();\n",
+    "\n",
+    "\n",
+    "// DECLARING some arbitrary static Method at top-level scope\n",
+    "static void ExecuteNowDeclareLater()\n",
+    "{\n",
+    "    // IMPLEMENTING a simple message \n",
+    "    Console.WriteLine(\n",
+    "        \"Were you expecting, like, an error or something????\"\n",
+    "    );\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
