modified:   9. Methods/Invocation/Overview.ipynb

--- a/9. Methods/Invocation/Overview.ipynb
+++ b/9. Methods/Invocation/Overview.ipynb
@@ -79,6 +79,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "To clarify how method **invocation** works,  \n",
     "the following example shows how Some Arbitrary Method might be **called**:"
    ]
@@ -106,35 +121,10 @@
     "    // IMPLEMENTATION of the Method\n",
     "    Console.WriteLine(\"Here's some arbitrary static Method\");\n",
     "    \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here's some arbitrary static Method\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "// INVOCATION of the Method\n",
+    "}\n",
     "\n",
+    "\n",
+    "// INVOCATION of the Method\n",
     "SomeArbitraryMethod();"
    ]
   },
