modified:   9. Methods/Invocation/Overview.ipynb

--- a/9. Methods/Invocation/Overview.ipynb
+++ b/9. Methods/Invocation/Overview.ipynb
@@ -441,7 +441,7 @@
     }
    },
    "source": [
-    "The Method may then be invoked from anywhere else in the Top-Level Method – `Main()`:"
+    "The Method may then be invoked from anywhere else in the Top-Level scope:"
    ]
   },
   {
