modified:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Parameters.ipynb
+++ b/9. Methods/Invocation/Parameters.ipynb
@@ -89,7 +89,7 @@
    },
    "source": [
     "$parameters\\_list = [type_1\\,\\,name_1 [,\\,\\,type_i\\,\\,name_i]]$   \n",
-    "$where\\,\\,\\footnotesize{i} = 2, 3, \\dots$"
+    "$where\\,\\,i = 2, 3, \\dots$"
    ]
   },
   {
