modified:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Parameters.ipynb
+++ b/9. Methods/Invocation/Parameters.ipynb
@@ -73,6 +73,21 @@
     }
    },
    "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "The `parameters_list` is a list with zero or more declarations of variables, separated by a comma, so that they will be used for the implementation of the method’s logic:"
    ]
   },
