modified:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Parameters.ipynb
+++ b/9. Methods/Invocation/Parameters.ipynb
@@ -88,7 +88,7 @@
     }
    },
    "source": [
-    "The `parameters_list` is a list with zero or more declarations of variables, separated by a comma, so that they will be used for the implementation of the method’s logic:"
+    "The `parameters_list` is a list with zero or more declarations of variables, separated by a comma, so that they will be used for the implementation of the Method’s logic:"
    ]
   },
   {
@@ -108,6 +108,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -117,9 +118,12 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "<br>"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -129,9 +133,16 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "When we create a Method, and we need certain information to develop the particular algorithm, we choose that variable from the list, which is of type $type_i$ and so we use it by its name $name_i$.    \n",
+    "   \n",
+    "The parameters from the list can be of any $type$.    \n",
+    "   \n",
+    "They can be **primitive types** (`int`, `double`, …) or **object types** (for example string or array – `int[]`, `double[]`, `string[]`, …)."
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -141,9 +152,12 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "<br>"
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "dotnet_interactive": {
@@ -153,7 +167,9 @@
      "kernelName": "csharp"
     }
    },
-   "source": []
+   "source": [
+    "When a Method has **parameters**, its behavior *depends* upon the parameter's values."
+   ]
   }
  ],
  "metadata": {
