modified:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Parameters.ipynb
+++ b/9. Methods/Invocation/Parameters.ipynb
@@ -277,9 +277,24 @@
     }
    },
    "source": [
-    "So, obviously, this Method is objectively useless.   \n",
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "So, obviously, the Method above is objectively useless.   \n",
     "\n",
-    "Perhaps a more effective approach we could have taken here is to have provided a **Single** **Parameter** which would afford the opportunity to pass the Method some integer value to report back:"
+    "Perhaps a more effective approach we could have taken here though is to have provided a **Single** **Parameter**, which would afford the opportunity to pass the Method some integer value to report back:"
    ]
   },
   {
