modified:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Parameters.ipynb
+++ b/9. Methods/Invocation/Parameters.ipynb
@@ -294,7 +294,8 @@
    "source": [
     "So, obviously, the Method above is objectively useless.   \n",
     "\n",
-    "Perhaps a more effective approach we could have taken here though is to have provided a **Single** **Parameter**, which would afford the opportunity to pass the Method some integer value to report back:"
+    "Perhaps a more effective approach we could have taken here though is to have provided a **Single** **Parameter**,   \n",
+    "which would afford the opportunity to pass the Method some integer value to report back:"
    ]
   },
   {
