modified:   9. Methods/Invocation/Parameters.ipynb

--- a/9. Methods/Invocation/Parameters.ipynb
+++ b/9. Methods/Invocation/Parameters.ipynb
@@ -451,6 +451,76 @@
    "source": [
     "PrintMax( 3, 7 );"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When a method with **Multiple Parameters** is declared, we must note that even if the parameters are of the same type, usage of *inline variable declaration* is not allowed.  \n",
+    "   \n",
+    "Below, the version of the `PrintMax` Method's declaration is invalid and will produce compiler error:\n",
+    "   \n",
+    "```c#\n",
+    "static void PrintMax( int parameter1, parameter2 )\n",
+    "``` "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "It is imperative to declare the Method such that the *type* of the parameters has been explicitly written before each parameter, no matter if some of its neighbors are of the same *type*, as follows:   \n",
+    "   \n",
+    "```c#\n",
+    "static void PrintMax( int parameter1, int parameter2 )\n",
+    "```  "
+   ]
   }
  ],
  "metadata": {
