--- a/9. Methods/An Overview.ipynb
+++ b/9. Methods/An Overview.ipynb
@@ -162,7 +162,7 @@
     "|Action|Description|\n",
     "|---|---|\n",
     "|Declare|A sort of \"registration\" in the program, made so it can be successfully referenced by the rest of the program at any time.|\n",
-    "|Implement|The process of typing the code that actually goes about ressolving a particular task.|\n",
+    "|Implement|The process of typing the code that actually goes about resolving a particular task.|\n",
     "|Invoke|The process that \"calls\" the already declared method, from any other part of the code.|"
    ]
   },
@@ -301,12 +301,10 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
       "aliases": [],
-      "languageName": null,
       "name": ".NET"
      },
      {
