--- a/9. Methods/Declaration/Parameters.ipynb
+++ b/9. Methods/Declaration/Parameters.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## Invocation\n",
+    "## Declaration\n",
     "### Parameters\n",
     "___"
    ]
@@ -545,7 +545,6 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
