modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -384,8 +384,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Outside of the Method call, however, the original Integer Argument still remains the same:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -440,9 +470,6 @@
     }
    ],
    "source": [
-    "// Outside of the Method call, however,\n",
-    "// the original Integer Argument still remains the same\n",
-    "\n",
     "IntegerArgument"
    ]
   }
