modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -350,12 +350,12 @@
    "source": [
     "When a variable is passed as a Method argument, its **value** is *copied* into the **parameter** listed as part of the Method's declaration.   \n",
     "   \n",
-    "After that, the *copy* will be used within the Method's implementation:"
+    "After that, only the *copy* will be used within the Method's implementation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -377,9 +377,6 @@
     }
    ],
    "source": [
-    "// Once we pass in the Integer Argument to the Method,\n",
-    "// a COPY of that Integer Variable is modified\n",
-    "\n",
     "AddOne( IntegerArgument );"
    ]
   },
