modified:   9. Methods/Invocation/Arguments.ipynb

--- a/9. Methods/Invocation/Arguments.ipynb
+++ b/9. Methods/Invocation/Arguments.ipynb
@@ -348,7 +348,7 @@
     }
    },
    "source": [
-    "When a variable is passed as a Method argument, its **value** is *copied* into the **parameter** listed as part of the Method's declaration.   \n",
+    "When a **Primitive Type** variable is passed as a Method **Argument**, its **value** is *copied* into the **parameter** listed as part of the Method's declaration.   \n",
     "   \n",
     "After that, only the *copy* will be used within the Method's implementation:"
    ]
